--- a/home page.html
+++ b/home page.html
@@ -4,27 +4,62 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Ime lika</title>
-        <meta name="description" content="Taj lik">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Design.css">
-    </head>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Best GPUs available</title>
+    <meta name="description" content="Best GPUs available">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="Design.css">
+</head>
 
 
-    <body>
-        <div class="nav">
+<body>
+    <div class="nav">
         <header>
-            <a class="home" href=home page.html>Folk Bask</a>
-            <a class="about" href=about.html>About</a>
-            <a class="family" href=family.html>Family</a>
+            <a class="home" href=home page.html>Home</a>
+            <a class="about" href=History.html>History</a>
+            <a class="family" href=cp.html>Current problems</a>
             <a class="sources" href=sources.html>Sources</a>
         </header>
     </div>
-    </body>
+
+    <div class="gpu4090">
+        <img src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
+        <div>
+            <h1>NVidia Geforce RTX 4090</h1>
+            <h4>Currently the best GPU available.</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur.</h4>
+        </div>
+    </div>
+
+    <div class="gpu3090">
+        <div>
+            <h1>NVidia Geforce RTX 3090</h1>
+            <h4>Used to be the best GPU available.</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur.</h4>
+        </div>
+        <img src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="50%" , style="margin-left: 2%;">
+    </div>
+
+    <div class="gpu3080">
+        <img src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" , style="margin-right: 2%;">
+        <div>
+            <h1>NVidia Geforce RTX 4090</h1>
+            <h4>Used to be the second best GPU available.</h4>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur.</h4>
+        </div>
+    </div>
+</body>
+
 </html>
-
-
-            
