--- a/home page.html
+++ b/home page.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="gpu4090">
-        <img src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
+        <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
         <div>
             <h1>NVidia Geforce RTX 4090</h1>
             <h4>Currently the best GPU available.</h4>
@@ -46,11 +46,11 @@
                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
                 fugiat nulla pariatur.</h4>
         </div>
-        <img src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="50%" , style="margin-left: 2%;">
+        <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="50%" , style="margin-left: 2%;">
     </div>
 
     <div class="gpu3080">
-        <img src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" , style="margin-right: 2%;">
+        <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" , style="margin-right: 2%;">
         <div>
             <h1>NVidia Geforce RTX 4090</h1>
             <h4>Used to be the second best GPU available.</h4>
