--- a/home page.html
+++ b/home page.html
@@ -60,6 +60,12 @@
                 fugiat nulla pariatur.</h4>
         </div>
     </div>
+<div class="footer">
+    <footer>
+        <small>Bruno Simunic, Filip</small>
+        <small>Nije lose ispalo.</small>
+    </footer>
+</div>
 </body>
 
 </html>
