--- a/home page.html
+++ b/home page.html
@@ -16,6 +16,7 @@
 
 
 <body>
+    <div class="main">
     <div class="nav">
         <header>
             <a class="home" href=home page.html>Home</a>
@@ -60,12 +61,16 @@
                 fugiat nulla pariatur.</h4>
         </div>
     </div>
-<div class="footer">
-    <footer>
-        <small>Bruno Simunic, Filip</small>
-        <small>Nije lose ispalo.</small>
-    </footer>
 </div>
+    <div class="footer">
+            <p class="left">Bruno , Filip</p>
+            <div>
+            <p>Nije lose</p>
+        </div>
+        
+    </div>
 </body>
 
 </html>
+
+
