--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main">
         <div class="nav">
             <header>
-                <a class="home" href=homepage.html>Home</a>
+                <a class="home" href=index.html>Home</a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
                 <a class="sources" href=sources.html>Sources</a>
