--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="description" content="Best GPUs available">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design.css">
+    <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.gif">
 </head>
 
 
@@ -19,7 +20,7 @@
     <div class="main">
         <div class="nav">
             <header>
-                <a class="home" href=index.html>Home</a>
+                <a class="hm" href=index.html><img class="home" src="https://infstranica.b-cdn.net/homebutton.gif" alt="Home"></a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
                 <a class="sources" href=sources.html>Sources</a>
