--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="gpu4090">
             <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
             <div class="txt4090">
-                <h1>NVidia Geforce RTX 4090</h1>
+                <h1>Nvidia Geforce RTX 4090</h1>
                 <h4>Currently the best GPU available.</h4>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
@@ -44,7 +44,7 @@
 
         <div class="gpu3090">
             <div class="txt3090">
-                <h1>NVidia Geforce RTX 3090</h1>
+                <h1>Nvidia Geforce RTX 3090</h1>
                 <h4>Used to be the best GPU available.</h4>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
@@ -62,7 +62,7 @@
             <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" ,
                 style="margin-right: 2%;">
             <div class="txt3080">
-                <h1>NVidia Geforce RTX 3080</h1>
+                <h1>Nvidia Geforce RTX 3080</h1>
                 <h4>Used to be the second best GPU available.</h4>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
