Video instead of gif

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main">
         <div class="nav">
             <header>
-                <a class="hm" href=index.html><img class="home" src="https://infstranica.b-cdn.net/homebutton.gif" alt="Home"></a>
+                <a class="hm" href=index.html><video class="home" autoplay loop><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
                 <a class="sources" href=sources.html>Sources</a>
