--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Best GPUs available">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design.css">
-    <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.gif">
+    <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
 </head>
 
 
