--- a/History.html
+++ b/History.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="Design_history.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8H5FKBKJ21');
+</script>
     <body>
         <div class="main">
             <div class="nav">
