--- a/music.html
+++ b/music.html
@@ -10,7 +10,7 @@
     <title>Current problems</title>
     <meta name="description" content="Best GPUs available">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Design_cp.css">
+    <link rel="stylesheet" href="Design_cart.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
