--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
     
         <script src="" async defer></script>
 <audio class="cart" controls preload="auto">
-  <source src="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" type="audio/mpeg" />
+  <source src="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" type="audio/wav" />
 </audio>
     </body>
 </html>
