--- a/music.html
+++ b/music.html
@@ -32,11 +32,12 @@
                     <a class="sources" href=sources.html>Sources</a>
                 </header>
             </div>
-    
-        <script src="" async defer></script>
-<h1>Playboi Carti - 24 Songs</h1>
+    <h1>Playboi Carti - 24 Songs</h1>
 <audio class="cart" controls preload="auto">
   <source src="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" type="audio/wav" />
 </audio>
+</div>
+        <script src="" async defer></script>
+
     </body>
 </html>
