--- a/music.html
+++ b/music.html
@@ -36,6 +36,7 @@
 <audio class="cart" controls preload="auto">
   <source src="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" type="audio/wav" />
 </audio>
+<a class="cart_down" href="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav">Download</a>
 </div>
         <script src="" async defer></script>
 
