--- a/music.html
+++ b/music.html
@@ -36,7 +36,7 @@
 <audio class="cart" controls preload="auto">
   <source src="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav" type="audio/wav" />
 </audio>
-<a class="cart_down" href="https://infstranica.b-cdn.net/24%20songs%20terrax%20mix.wav">Download</a>
+<a class="cart_down" href="https://storage.bunnycdn.com/infstranica/24%20songs%20terrax%20mix.wav?AccessKey=5f66dd19-29b8-4b62-8ce320bb8352-c5a0-40e6&download">Download</a>
 </div>
         <script src="" async defer></script>
 
