--- a/music.html
+++ b/music.html
@@ -26,7 +26,7 @@
         <div class="main">
             <div class="nav">
                 <header>
-                    <a class="hm" href=index.html><img class="home" src="https://infstranica.b-cdn.net/4090.png"></a>
+                    <a class="hm" href=index.html><img class="home" src="https://infstranica.b-cdn.net/IMG_2392.png"></a>
                     <a class="about" href=History.html>History</a>
                     <a class="family" href=cp.html>Current problems</a>
                     <a class="sources" href=sources.html>Sources</a>
