--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Current problems</title>
-    <meta name="description" content="Best GPUs available">
+    <meta name="description" content="24 Songs">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design_cart.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
