--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
 
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8H5FKBKJ21');
+</script>
 <body>
     <div class="main">
         <div class="nav">
