--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="nav">
             <header>
                 <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline ><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
-                <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon.png"></a>
+                <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon2.png"></a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
                 <a class="sources" href=sources.html>Sources</a>
