--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
                 <a class="sources" href=music.html>Sources</a>
             </header>
         </div>
-
+        <div class="main_mobile">
+            <div class="nav">
+                <header>
+                    <a class="about_mobile" href=History.html>History</a>
+                    <a class="family_mobile" href=cp.html>Current problems</a>
+                    <a class="sources_mobile" href=music.html>Sources</a>
+                </header>
+            </div>
+        </div>
         <div class="gpu4090">
             <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
             <div class="txt4090">
