--- a/sources.html
+++ b/sources.html
@@ -33,7 +33,14 @@
                     <a class="sources" href=sources.html>Sources</a>
                 </header>
             </div>
-    
+            <div class="main_mobile">
+                <div class="nav">
+                    <header>
+                        <a class="about_mobile" href=History.html>History</a>
+                        <a class="family_mobile" href=cp.html>Current problems</a>
+                        <a class="sources_mobile" href=music.html>Sources</a>
+                    </header>
+                </div>
         <script src="" async defer></script>
     </body>
 </html>
