--- a/music.html
+++ b/music.html
@@ -26,8 +26,8 @@
         <div class="main">
             <div class="nav">
                 <header>
-                    <a class="hm" href=index.html><video class="home" autoplay loop><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
-                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon2.png"></a>
+                    <a class="hm" href=index.html><video class="home" autoplay loop><source src="https://infstranica.b-cdn.net/IMG_2392.png" type="video/mp4"></video></a>
+                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/IMG_2392.png"></a>
                     <a class="about" href=History.html>History</a>
                     <a class="family" href=cp.html>Current problems</a>
                     <a class="sources" href=sources.html>Sources</a>
