--- a/sources.html
+++ b/sources.html
@@ -30,7 +30,7 @@
                     <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline><source src="https://infstranica.b-cdn.net/homebutton-trans.mp4" type="video/mp4"></video></a>
                     <a class="about" href=History.html>History</a>
                     <a class="family" href=cp.html>Current problems</a>
-                    <a class="sources" href=sources.html>Sources</a>
+                    <a class="sources" href=music.html>Sources</a>
                 </header>
             </div>
             <div class="main_mobile">
