--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon-trans.png"></a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
-                <a class="sources" href=music.html>Sources</a>
+                <a class="sources" href=sources.html>Sources</a>
             </header>
         </div>
         <div class="main_mobile">
@@ -48,7 +48,7 @@
                 <header>
                     <a class="about_mobile" href=History.html>History</a>
                     <a class="family_mobile" href=cp.html>Current problems</a>
-                    <a class="sources_mobile" href=music.html>Sources</a>
+                    <a class="sources_mobile" href=sources.html>Sources</a>
                 </header>
             </div>
         </div>
