--- a/cp.html
+++ b/cp.html
@@ -30,7 +30,7 @@
                     <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon2.png"></a>
                     <a class="about" href=History.html>History</a>
                     <a class="family" href=cp.html>Current problems</a>
-                    <a class="sources" href=music.html>Sources</a>
+                    <a class="sources" href=sources.html>Sources</a>
                 </header>
             </div>
             <div class="main_mobile">
@@ -38,7 +38,7 @@
                     <header>
                         <a class="about_mobile" href=History.html>History</a>
                         <a class="family_mobile" href=cp.html>Current problems</a>
-                        <a class="sources_mobile" href=music.html>Sources</a>
+                        <a class="sources_mobile" href=sources.html>Sources</a>
                     </header>
                 </div>
             </div>
