--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <html>
 
 <head>
-  
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-8H5FKBKJ21');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-8H5FKBKJ21');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Best GPUs available</title>
@@ -26,18 +26,22 @@
 </head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-8H5FKBKJ21');
+    gtag('config', 'G-8H5FKBKJ21');
 </script>
+
 <body>
     <div class="main">
         <div class="nav">
             <header>
-                <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline ><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
-                <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon2.png"></a>
+                <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline>
+                        <source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4">
+                    </video></a>
+                <a class="hm_mob" href=index.html><img class="hm_mob_pic"
+                        src="https://infstranica.b-cdn.net/icon2.png"></a>
                 <a class="about" href=History.html>History</a>
                 <a class="family" href=cp.html>Current problems</a>
                 <a class="sources" href=music.html>Sources</a>
@@ -107,5 +111,9 @@
 
     </div>
 </body>
-
+<script>
+    if (navigator.platform.match('Mac') !== null) {
+        document.body.setAttribute('class', 'osx');
+    }
+    </script>
 </html>
