--- a/sources.html
+++ b/sources.html
@@ -7,12 +7,11 @@
     <head>
         <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sources</title>
+    <title>History</title>
     <meta name="description" content="Best GPUs available">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Design_sources.css">
+    <link rel="stylesheet" href="Design_history.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
-    
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
 <script>
@@ -27,7 +26,8 @@
         <div class="main">
             <div class="nav">
                 <header>
-                    <a class="hm" href=index.html><video class="home" autoplay loop muted playsinline><source src="https://infstranica.b-cdn.net/homebutton-trans.mp4" type="video/mp4"></video></a>
+                    <a class="hm" href=index.html><video class="home" autoplay loop><source src="https://infstranica.b-cdn.net/homebutton-trans.mp4" type="video/mp4"></video></a>
+                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon-trans.png"></a>
                     <a class="about" href=History.html>History</a>
                     <a class="family" href=cp.html>Current problems</a>
                     <a class="sources" href=sources.html>Sources</a>
@@ -41,6 +41,7 @@
                         <a class="sources_mobile" href=sources.html>Sources</a>
                     </header>
                 </div>
+            </div>
         <script src="" async defer></script>
     </body>
 </html>
