--- a/History.html
+++ b/History.html
@@ -72,6 +72,13 @@
                         <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
                         </div>
                 </div>
+            </div>
+                <div class="footer">
+                    <p class="left">Bruno , Filip</p>
+                    <div>
+                        <p>Nije lose</p>
+                    </div>
+                </div>
         <script src="" async defer></script>
     </body>
     <script>
