--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
 
     gtag('config', 'G-8H5FKBKJ21');
 </script>
-
+<script src="https://unpkg.com/swup@3"></script>
+<script src="script.js"></script>
 <body>
+    
     <div class="main">
         <div class="nav">
             <header>
@@ -53,6 +55,7 @@
                 </header>
             </div>
         </div>
+        <main id="swup" class="transition-move">
         <div class="gpu4090">
             <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
             <div class="txt4090">
@@ -100,6 +103,7 @@
             </div>
         </div>
     </div>
+</main>
     <div class="footer">
         <p class="left">Bruno , Filip</p>
         <div>
