--- a/History.html
+++ b/History.html
@@ -21,8 +21,11 @@
 
   gtag('config', 'G-8H5FKBKJ21');
 </script>
+<script src="https://unpkg.com/swup@3"></script>
+<script src="script.js"></script>
 </head>
     <body>
+        <main id="swup" class="transition-move">
         <div class="main">
             <div class="nav">
                 <header>
@@ -73,13 +76,13 @@
                         </div>
                 </div>
             </div>
+            </main>
                 <div class="footer">
                     <p class="left">Bruno , Filip</p>
                     <div>
                         <p>Nije lose</p>
                     </div>
                 </div>
-        <script src="" async defer></script>
     </body>
     <script>
         if (navigator.platform.match('Mac') !== null) {
