--- a/History.html
+++ b/History.html
@@ -4,8 +4,9 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
+
+<head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>History</title>
     <meta name="description" content="Best GPUs available">
@@ -13,82 +14,91 @@
     <link rel="stylesheet" href="Design_history.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-8H5FKBKJ21');
-</script>
-<script src="https://unpkg.com/swup@3"></script>
-<script src="script.js"></script>
+        gtag('config', 'G-8H5FKBKJ21');
+    </script>
+    <script src="https://unpkg.com/swup@3"></script>
+    <script src="script.js"></script>
 </head>
-    <body>
-        <main id="swup" class="transition-move">
-        <div class="main">
+
+<body>
+    <div class="main">
+        <div class="nav">
+            <header>
+                <a class="hm" href=index.html><video class="home" autoplay loop>
+                        <source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4">
+                    </video></a>
+                <a class="hm_mob" href=index.html><img class="hm_mob_pic"
+                        src="https://infstranica.b-cdn.net/icon-trans.png"></a>
+                <a class="about" href=History.html>History</a>
+                <a class="family" href=cp.html>Current problems</a>
+                <a class="sources" href=sources.html>Sources</a>
+            </header>
+        </div>
+        <div class="main_mobile">
             <div class="nav">
                 <header>
-                    <a class="hm" href=index.html><video class="home" autoplay loop><source src="https://infstranica.b-cdn.net/homebutton.mp4" type="video/mp4"></video></a>
-                    <a class="hm_mob" href=index.html><img class="hm_mob_pic" src="https://infstranica.b-cdn.net/icon-trans.png"></a>
-                    <a class="about" href=History.html>History</a>
-                    <a class="family" href=cp.html>Current problems</a>
-                    <a class="sources" href=sources.html>Sources</a>
+                    <a class="about_mobile" href=History.html>History</a>
+                    <a class="family_mobile" href=cp.html>Current problems</a>
+                    <a class="sources_mobile" href=sources.html>Sources</a>
                 </header>
             </div>
-            <div class="main_mobile">
-                <div class="nav">
-                    <header>
-                        <a class="about_mobile" href=History.html>History</a>
-                        <a class="family_mobile" href=cp.html>Current problems</a>
-                        <a class="sources_mobile" href=sources.html>Sources</a>
-                    </header>
-                </div>
-            </div>
-
-            
-                <div class="gf256">
-                    <div>
+        </div>
+        <!-- <main id="swup" class="transition-move"> -->
+            <div class="gf256">
+                <div>
                     <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="100%" ,
                         style="margin-right: 2%;">
-                        <h4 class="firstgpu">First GPU, Geforce 256</h4>
-                        </div>
-                    <div class="txt256">
-                        <p class="history">The history of Graphics Processing Units (GPUs) can be traced back to the 1980s when they were first developed for
-                            gaming consoles and personal computers. In the early days, GPUs were mainly used to accelerate 2D graphics and later
-                            evolved to support 3D graphics rendering. However, it wasn't until the late 1990s that GPUs started being used for
-                            scientific and engineering simulations.</p>
-                    </div>
+                    <h4 class="firstgpu">First GPU, Geforce 256</h4>
                 </div>
-                <img class="left-line" src="https://infstranica.b-cdn.net/line.svg" alt="Curvy line">
-                    <div class="sap5570">
-                    <div class="txt5570">
-                        <p class="history">The introduction of programmable shaders in the early 2000s marked a
-                            significant breakthrough for GPUs, allowing them to perform complex calculations and simulations beyond just
-                            rendering graphics. This opened up a whole new realm of possibilities for scientific and computational workloads.
-                            The advent of parallel computing and machine learning further accelerated the development of GPUs, making them an
-                            essential tool for high-performance computing.</p>
-                    </div>
-                    <div>
-                    <img class="sa5570" src="https://infstranica.b-cdn.net/Hd%205570%20Sapphire.png"  ,
-                        style="margin-right: 2%;">
-                        <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
-                        </div>
+                <div class="txt256">
+                    <p class="history">The history of Graphics Processing Units (GPUs) can be traced back to the 1980s
+                        when they were first developed for
+                        gaming consoles and personal computers. In the early days, GPUs were mainly used to accelerate
+                        2D graphics and later
+                        evolved to support 3D graphics rendering. However, it wasn't until the late 1990s that GPUs
+                        started being used for
+                        scientific and engineering simulations.</p>
                 </div>
             </div>
-            </main>
-                <div class="footer">
-                    <p class="left">Bruno , Filip</p>
-                    <div>
-                        <p>Nije lose</p>
-                    </div>
+            <img class="left-line" src="https://infstranica.b-cdn.net/line.svg" alt="Curvy line">
+            <div class="sap5570">
+                <div class="txt5570">
+                    <p class="history">The introduction of programmable shaders in the early 2000s marked a
+                        significant breakthrough for GPUs, allowing them to perform complex calculations and simulations
+                        beyond just
+                        rendering graphics. This opened up a whole new realm of possibilities for scientific and
+                        computational workloads.
+                        The advent of parallel computing and machine learning further accelerated the development of
+                        GPUs, making them an
+                        essential tool for high-performance computing.</p>
                 </div>
-    </body>
-    <script>
-        if (navigator.platform.match('Mac') !== null) {
-            document.body.setAttribute('class', 'osx');
-        }
-    </script>
+                <div>
+                    <img class="sa5570" src="https://infstranica.b-cdn.net/Hd%205570%20Sapphire.png" ,
+                        style="margin-right: 2%;">
+                    <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
+                </div>
+            </div>
+    </div>
+    <!-- </main> -->
+    <div class="footer">
+        <p class="left">Bruno , Filip</p>
+        <div>
+            <p>Nije lose</p>
+        </div>
+    </div>
+</body>
+<script>
+    if (navigator.platform.match('Mac') !== null) {
+        document.body.setAttribute('class', 'osx');
+    }
+</script>
+
 </html>
 
 <!--  Today, GPUs have become ubiquitous in various fields, including
