--- a/History.html
+++ b/History.html
@@ -49,7 +49,7 @@
                 </header>
             </div>
         </div>
-        <!-- <main id="swup" class="transition-move"> -->
+        <main id="swup" class="transition-move2">
             <div class="gf256">
                 <div>
                     <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="100%" ,
@@ -84,8 +84,9 @@
                     <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
                 </div>
             </div>
+        </main>
     </div>
-    <!-- </main> -->
+    </main>
     <div class="footer">
         <p class="left">Bruno , Filip</p>
         <div>
