--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
+    <script defer src="script.js"></script>
 
 </head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
@@ -32,8 +33,6 @@
 
     gtag('config', 'G-8H5FKBKJ21');
 </script>
-<script src="https://unpkg.com/swup@3"></script>
-<script src="script.js"></script>
 <body>
     <div class="main">
         <div class="nav">
@@ -101,8 +100,9 @@
                     fugiat nulla pariatur.</h4>
             </div>
         </div>
+    </main>
     </div>
-</main>
+
     <div class="footer">
         <p class="left">Bruno , Filip</p>
         <div>
