--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <html>
 
 <head>
-
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -22,9 +21,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Design.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
-    <script defer src="script.js"></script>
-
 </head>
+<script  src="script.js"></script>
+<script  src="https://unpkg.com/swup@3"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
