--- a/History.html
+++ b/History.html
@@ -23,8 +23,11 @@
         gtag('config', 'G-8H5FKBKJ21');
     </script>
 </head>
-
+<script>const swup = new Swup();</script>
+<script src="https://unpkg.com/swup@3"></script>
 <body>
+    <main id="swup" class="transition-move">
+
     <div class="main">
         <div class="nav">
             <header>
@@ -47,7 +50,6 @@
                 </header>
             </div>
         </div>
-        <main id="swup" class="transition-move2">
             <div class="gf256">
                 <div>
                     <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="100%" ,
@@ -82,7 +84,6 @@
                     <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
                 </div>
             </div>
-        </main>
     </div>
     </main>
     <div class="footer">
