--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <link rel="stylesheet" href="Design.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
 </head>
-<script  src="script.js"></script>
-<script  src="https://unpkg.com/swup@3"></script>
+<script>const swup = new Swup();
+</script>
+<script src="https://unpkg.com/swup@3"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -33,6 +34,7 @@
     gtag('config', 'G-8H5FKBKJ21');
 </script>
 <body>
+    <main id="swup" class="transition-move">
     <div class="main">
         <div class="nav">
             <header>
@@ -52,7 +54,6 @@
                 </header>
             </div>
         </div>
-        <main id="swup" class="transition-move">
         <div class="gpu4090">
             <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="50%" , style="margin-right: 2%;">
             <div class="txt4090">
@@ -99,8 +100,8 @@
                     fugiat nulla pariatur.</h4>
             </div>
         </div>
-    </main>
     </div>
+</main>
 
     <div class="footer">
         <p class="left">Bruno , Filip</p>
