--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-
 <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
     <script>
@@ -22,9 +17,8 @@
     <link rel="stylesheet" href="Design.css">
     <link rel="icon" type="image/x-icon" href="https://infstranica.b-cdn.net/icon.png">
 </head>
-<script>const swup = new Swup();
-</script>
 <script src="https://unpkg.com/swup@3"></script>
+<script>const swup = new Swup();</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8H5FKBKJ21"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -34,7 +28,7 @@
     gtag('config', 'G-8H5FKBKJ21');
 </script>
 <body>
-    <main id="swup" class="transition-move">
+    <main id="swup" class="transition-fade">
     <div class="main">
         <div class="nav">
             <header>
