--- a/History.html
+++ b/History.html
@@ -46,7 +46,7 @@
                 </header>
             </div>
         </div>
-        <main id="swup" class="transition-move">
+        <main id="swup" class="transition-fade">
             <div class="gf256">
                 <div>
                     <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="100%" ,
