--- a/index.html
+++ b/index.html
@@ -107,5 +107,5 @@
     }
 </script>
 <script src="https://unpkg.com/swup@3"></script>
-<script>const swup = new Swup({cache:false});</script>
+<script>const swup = new Swup();</script>
 </html>
