--- a/History.html
+++ b/History.html
@@ -49,7 +49,7 @@
         </div>
             <div class="gf256">
                 <div>
-                    <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="100%" ,
+                    <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="80%" ,
                         style="margin-right: 2%;">
                     <h4 class="firstgpu">First GPU, Geforce 256</h4>
                 </div>
@@ -76,8 +76,7 @@
                         essential tool for high-performance computing.</p>
                 </div>
                 <div>
-                    <img class="sa5570" src="https://infstranica.b-cdn.net/Hd%205570%20Sapphire.png" ,
-                        style="margin-right: 2%;">
+                    <img class="sa5570" src="https://infstranica.b-cdn.net/Hd%205570%20Sapphire.png">
                     <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
                 </div>
             </div>
