--- a/index.html
+++ b/index.html
@@ -60,7 +60,20 @@
                     fugiat nulla pariatur.</h4>
             </div>
         </div>
-
+        <div class="gpu4090_mob">
+            <img class="g4090" src="https://infstranica.b-cdn.net/4090.png" width="80%" , style="margin-left: 10%;">
+            <div class="txt4090">
+                <h1>Nvidia Geforce RTX 4090</h1>
+                <h4>Currently the best GPU available.</h4>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur.</h4>
+            </div>
+        </div>
         <div class="gpu3090">
             <div class="txt3090">
                 <h1>Nvidia Geforce RTX 3090</h1>
@@ -76,10 +89,40 @@
             <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="50%" ,
                 style="margin-left: 2%;">
         </div>
-
+        <div class="gpu3090_mob">
+            <img class="g3090" src="https://infstranica.b-cdn.net/3090-Current%20View.png" width="80%" ,
+                style="margin-left: 10%;">
+            <div class="txt3090">
+                <h1>Nvidia Geforce RTX 3090</h1>
+                <h4>Used to be the best GPU available.</h4>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur.</h4>
+            </div>
+            
+        </div>
         <div class="gpu3080">
             <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="50%" ,
                 style="margin-right: 2%;">
+            <div class="txt3080">
+                <h1>Nvidia Geforce RTX 3080</h1>
+                <h4>Used to be the second best GPU available.</h4>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip
+                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                    dolore eu
+                    fugiat nulla pariatur.</h4>
+            </div>
+        </div>
+        <div class="gpu3080_mob">
+            <img class="g3080" src="https://infstranica.b-cdn.net/3080-Current%20View.png" width="80%" ,
+                style="margin-left: 10%;">
             <div class="txt3080">
                 <h1>Nvidia Geforce RTX 3080</h1>
                 <h4>Used to be the second best GPU available.</h4>
