--- a/History.html
+++ b/History.html
@@ -63,6 +63,22 @@
                         scientific and engineering simulations.</p>
                 </div>
             </div>
+            <div class="gf256_mob" style="margin-bottom: 30px;">
+                <div>
+                    <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="80%" ,
+                        style="margin-left: 10%;">
+                    <h4 class="firstgpu" style="margin-left: 8%;">First GPU, Geforce 256</h4>
+                </div>
+                <div class="txt256">
+                    <p class="history">The history of Graphics Processing Units (GPUs) can be traced back to the 1980s
+                        when they were first developed for
+                        gaming consoles and personal computers. In the early days, GPUs were mainly used to accelerate
+                        2D graphics and later
+                        evolved to support 3D graphics rendering. However, it wasn't until the late 1990s that GPUs
+                        started being used for
+                        scientific and engineering simulations.</p>
+                </div>
+            </div>
             <img class="left-line" src="https://infstranica.b-cdn.net/line.svg" alt="Curvy line">
             <div class="sap5570">
                 <div class="txt5570">
@@ -78,6 +94,22 @@
                 <div>
                     <img class="sa5570" src="https://infstranica.b-cdn.net/Hd%205570%20Sapphire.png">
                     <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
+                </div>
+            </div>
+            <div class="sap5570_mob">
+                <div>
+                    <img class="sa5570" src="https://infstranica.b-cdn.net/Hd%205570%20Sapphire.png">
+                    <h4 class="firstgpu-right">Sapphire Hd 5570</h4>
+                </div>
+                <div class="txt5570">
+                    <p class="history">The introduction of programmable shaders in the early 2000s marked a
+                        significant breakthrough for GPUs, allowing them to perform complex calculations and simulations
+                        beyond just
+                        rendering graphics. This opened up a whole new realm of possibilities for scientific and
+                        computational workloads.
+                        The advent of parallel computing and machine learning further accelerated the development of
+                        GPUs, making them an
+                        essential tool for high-performance computing.</p>
                 </div>
             </div>
             </main>
