--- a/History.html
+++ b/History.html
@@ -23,6 +23,7 @@
         gtag('config', 'G-8H5FKBKJ21');
     </script>
 </head>
+
 <body>
     <div class="main">
         <div class="nav">
@@ -46,7 +47,7 @@
                 </header>
             </div>
         </div>
-            <main id="swup" class="transition-fade">
+        <!-- <main id="swup" class="transition-fade"> -->
             <div class="gf256">
                 <div>
                     <img class="g256" src="https://infstranica.b-cdn.net/VisionTek_GeForce_256.png" width="80%" ,
@@ -112,7 +113,7 @@
                         essential tool for high-performance computing.</p>
                 </div>
             </div>
-            </main>
+        <!-- </main> -->
     </div>
     <div class="footer">
         <p class="left">Bruno , Filip</p>
@@ -128,4 +129,5 @@
 </script>
 <script>const swup = new Swup();</script>
 <script src="https://unpkg.com/swup@3"></script>
+
 </html>
