--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
     gtag('config', 'G-8H5FKBKJ21');
 </script>
 <body>
+    <div id="preloader">
+        <div class="content">
+            <h2>Loading</h2>
+            <h2>Loading</h2>
+        </div>
+    </div>
     <div class="main">
         <div class="nav">
             <header>
@@ -143,6 +149,7 @@
             <p>Nije lose</p>
         </div>
     </div>
+<script src="loader.js"></script>
 </body>
 <script>
     if (navigator.platform.match('Mac') !== null) {
